# aoc-2023

./: .gitignore  aoc2023.cabal
app/: Main.hs
lib/: Common.hs  Day1.hs
lib/Common/: Parser.hs
test/: test.hs
